--- a/BloggoFrontend/pages/membership.html
+++ b/BloggoFrontend/pages/membership.html
@@ -1,10 +1,310 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bloggo — Membership</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <style>
+        :root {
+            --primary: #007bff;
+            --primary-hover: #0069d9;
+            --text: #333;
+            --light: #f8f9fa;
+        }
+
+        body {
+            font-family: "Segoe UI", sans-serif;
+            background: #fff;
+            color: var(--text);
+        }
+
+        header {
+            background: var(--light);
+            border-bottom: 1px solid #ddd;
+            padding: 0.8rem 0;
+        }
+
+
+        #profileTabs{
+            display: flex;
+            justify-content: flex-start;
+            margin-bottom: 1rem;
+        }
+        .avatar{
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid var(--border);
+        }
+
+        /* Avatar in header */
+        .profile-menu .avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            border: 2px solid #ddd;
+            transition: 0.3s;
+        }
+
+        .profile-menu .avatar:hover {
+            border-color: #007bff;
+        }
+
+        /* Dropdown menu */
+        .dropdown-menu {
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            padding: 8px 0;
+            font-size: 0.95rem;
+        }
+
+        .dropdown-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 10px 15px;
+        }
+
+        .dropdown-item:hover {
+            background-color: #f8f9fa;
+        }
+
+        header {
+            position:sticky;
+            top:0;
+            z-index:10;
+            background:rgba(255,255,255,.8);
+            backdrop-filter:saturate(180%) blur(12px);
+            border-bottom:1px solid var(--border)
+        }
+        .nav {
+            display:flex;
+            align-items:center;
+            justify-content:space-between;
+            padding:14px 0
+        }
+        .brand {
+            display:flex;
+            align-items:center;
+            text-decoration:none;
+            cursor:pointer;
+        }
+        .brand-logo {
+            width:200px;
+            height:60px;
+            border-radius:8px;
+            object-fit:contain;
+            transition:transform 0.2s ease-in-out;
+        }
+
+        .nav-actions {
+            display:flex;
+            align-items:center;
+            gap:10px
+        }
+        .btn {
+            padding:10px 16px;
+            border-radius:999px;
+            border:1px solid var(--border);
+            background:#fff;
+            color:var(--text);
+            font-weight:600;
+            transition:.2s;
+            cursor:pointer
+        }
+        .btn:hover {
+            transform:translateY(-1px);
+            box-shadow:var(--shadow)
+        }
+
+        /* Pricing Table */
+        .pricing-section {
+            padding: 60px 0;
+            text-align: center;
+        }
+
+        .pricing-card {
+            border: 1px solid #ddd;
+            border-radius: 12px;
+            padding: 2rem;
+            transition: transform 0.2s ease;
+        }
+
+        .pricing-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+        }
+
+        .pricing-card h3 {
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        .pricing-price {
+            font-size: 2rem;
+            font-weight: bold;
+            margin: 1rem 0;
+            color: var(--primary);
+        }
+
+        .pricing-features {
+            text-align: left;
+            margin-bottom: 1.5rem;
+        }
+
+        .pricing-features li {
+            margin-bottom: 0.5rem;
+        }
+
+        .btn-plan {
+            background: var(--primary);
+            color: #fff;
+            border-radius: 50px;
+            padding: 0.6rem 1.5rem;
+        }
+
+        .btn-plan:hover {
+            background: var(--primary-hover);
+            color: #fff;
+        }
+
+        /* Checkout Progress */
+        .checkout-steps {
+            display: flex;
+            justify-content: center;
+            margin: 50px 0 20px;
+        }
+
+        .step {
+            display: flex;
+            align-items: center;
+            margin: 0 15px;
+            font-weight: 500;
+            color: #999;
+        }
+
+        .step.active {
+            color: var(--primary);
+        }
+
+        .step-circle {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            background: #ddd;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 8px;
+        }
+
+        .step.active .step-circle {
+            background: var(--primary);
+        }
+    </style>
 </head>
 <body>
+<!-- Navbar -->
+<header>
+    <div class="container nav">
+        <a class="brand" href="#" aria-label="Bloggo Home">
+            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
+        </a>
 
+        <nav class="nav-actions">
+            <a class="btn" href="dashboard.html">Home</a>
+            <a class="btn" href="notification.html">Notifications</a>
+            <a class="btn " href="membership.html">Membership</a>
+            <div class="profile-menu">
+                <!-- User Profile (visible after login) -->
+                <div class="profile-menu">
+                    <!-- User Profile Menu -->
+                    <div class="dropdown profile-menu">
+                        <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                            <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
+                            <li><a class="dropdown-item" href="stories.html">✍️ Stories</a></li>
+                            <li><a class="dropdown-item" href="membership.html">⭐ Become a Member</a></li>
+                            <li><a class="dropdown-item" href="settings.html">⚙️ Settings</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item text-danger" href="logout.html">🚪 Logout</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
+
+<!-- Pricing Table -->
+<section class="pricing-section container">
+    <h2 class="mb-5">Choose Your Plan</h2>
+    <div class="row g-4">
+        <!-- Free Plan -->
+        <div class="col-md-4">
+            <div class="pricing-card">
+                <h3>Free</h3>
+                <p class="pricing-price">$0 <small>/mo</small></p>
+                <ul class="pricing-features">
+                    <li>✔ Access to basic features</li>
+                    <li>✔ Community support</li>
+                    <li>✖ Limited customization</li>
+                </ul>
+                <a href="#" class="btn btn-plan">Get Started</a>
+            </div>
+        </div>
+
+        <!-- Premium Plan -->
+        <div class="col-md-4">
+            <div class="pricing-card border-primary shadow">
+                <h3>Premium</h3>
+                <p class="pricing-price">$9 <small>/mo</small></p>
+                <ul class="pricing-features">
+                    <li>✔ All Free features</li>
+                    <li>✔ Advanced analytics</li>
+                    <li>✔ Priority support</li>
+                </ul>
+                <a href="#" class="btn btn-plan">Upgrade</a>
+            </div>
+        </div>
+
+        <!-- Pro Plan -->
+        <div class="col-md-4">
+            <div class="pricing-card">
+                <h3>Pro</h3>
+                <p class="pricing-price">$19 <small>/mo</small></p>
+                <ul class="pricing-features">
+                    <li>✔ All Premium features</li>
+                    <li>✔ Team collaboration tools</li>
+                    <li>✔ Dedicated account manager</li>
+                </ul>
+                <a href="#" class="btn btn-plan">Go Pro</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Checkout Progress -->
+<div class="checkout-steps">
+    <div class="step active">
+        <div class="step-circle">1</div> Plan
+    </div>
+    <div class="step">
+        <div class="step-circle">2</div> Payment
+    </div>
+    <div class="step">
+        <div class="step-circle">3</div> Confirmation
+    </div>
+</div>
+
+<div class="container text-center mb-5">
+    <p class="text-muted">Secure checkout process — your data is protected 🔒</p>
+</div>
 </body>
 </html>
