--- a/BloggoFrontend/pages/logout.html
+++ b/BloggoFrontend/pages/logout.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bloggo - Logout</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .logout-card {
+            background: #fff;
+            padding: 3rem 2.5rem;
+            border-radius: 16px;
+            text-align: center;
+            box-shadow: 0 12px 30px rgba(0,0,0,0.15);
+            max-width: 400px;
+            width: 90%;
+            animation: fadeIn 0.8s ease;
+        }
+        .logout-card h2 {
+            color: #4A4A4A;
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+        .logout-card p {
+            color: #6c757d;
+            margin-bottom: 2rem;
+            font-size: 0.95rem;
+        }
+        .btn-login {
+            display: inline-block;
+            background: linear-gradient(90deg, #240a40 0%, #2575fc 100%);
+            color: #fff;
+            padding: 0.65rem 2rem;
+            font-weight: 600;
+            border-radius: 50px;
+            text-decoration: none;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+        .btn-login:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(37,117,252,0.4);
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
+
+<div class="logout-card">
+    <h2>👋 See You Soon!</h2>
+    <p>You have successfully logged out from Bloggo. Thank you for visiting!</p>
+    <a href="signing.html" class="btn-login">Go to Login</a>
+</div>
+
+<script>
+    // Auto-redirect to login page after 3 seconds
+    /*setTimeout(() => {
+        window.location.href = "login.html";
+    }, 3000);*/
+</script>
 
 </body>
 </html>
