--- a/BloggoFrontend/pages/settings.html
+++ b/BloggoFrontend/pages/settings.html
@@ -2,9 +2,162 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bloggo - Settings</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/settings.css">
 </head>
 <body>
 
+<header>
+    <div class="container nav">
+        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
+            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
+        </a>
+
+        <!-- 🔍 Search Bar -->
+        <form class="d-flex mx-3 flex-grow-1" role="search" onsubmit="return false;">
+            <input class="form-control me-2" type="search" id="searchInput" placeholder="Search blogs, tags, or authors..." aria-label="Search">
+            <button class="btn btn-outline-success" type="button" onclick="searchBlogs()">Search</button>
+        </form>
+
+        <nav class="nav-actions">
+            <a class="btn" href="about-bloggo.html">Explore</a>
+            <a class="btn" href="notification.html">Notifications</a>
+            <a class="btn btn-primary" href="blog-editor.html">Write</a>
+
+            <!-- ✅ Profile dropdown -->
+            <div class="dropdown profile-menu">
+                <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="../assets/boy%20(1).png" class="avatar" alt="User Profile">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                    <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
+                    <li><a class="dropdown-item" href="stories.html">✍️ Stories</a></li>
+                    <li><a class="dropdown-item" href="membership.html">⭐ Become a Member</a></li>
+                    <li><a class="dropdown-item" href="settings.html">⚙️ Settings</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item text-danger" href="logout.html">🚪 Logout</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+
+<div class="settings-wrapper">
+    <!-- Sidebar -->
+    <aside class="settings-sidebar">
+        <a href="#profile" class="active">Profile</a>
+        <a href="#preferences">Preferences</a>
+        <a href="#password">Change Password</a>
+        <a href="#membership">Membership</a>
+    </aside>
+
+    <!-- Main Content -->
+    <div class="settings-content">
+        <!-- Profile Settings -->
+        <section class="settings-section" id="profile">
+            <h4>Profile Settings</h4>
+
+            <div class="text-center mb-3">
+                <!-- Avatar Preview (clickable) -->
+                <img src="../assets/boy%20(1).png" alt="Avatar" class="avatar-preview" id="avatarPreview" style="cursor: pointer; border-radius: 50%; width: 100px; height: 100px; object-fit: cover;" title="Click to change avatar">
+
+                <!-- Hidden File Input -->
+                <input type="file" id="avatarInput" accept="image/*" style="display: none;">
+            </div>
+
+            <form>
+                <div class="mb-3">
+                    <label class="form-label">Username</label>
+                    <input type="text" class="form-control" value="alex">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Email</label>
+                    <input type="email" class="form-control" value="alex@mail.com">
+                </div>
+                <button type="submit" class="btn btn-primary">Update Profile</button>
+            </form>
+        </section>
+
+        <!-- Preferences -->
+        <section class="settings-section" id="preferences">
+            <h4>Account Preferences</h4>
+            <form>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="emailNotifications" checked>
+                    <label class="form-check-label" for="emailNotifications">Email Notifications</label>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="darkMode">
+                    <label class="form-check-label" for="darkMode">Enable Dark Mode</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Save Preferences</button>
+            </form>
+        </section>
+
+        <!-- Change Password -->
+        <section class="settings-section" id="password">
+            <h4>Change Password</h4>
+            <form>
+                <div class="mb-3">
+                    <label class="form-label">Current Password</label>
+                    <input type="password" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">New Password</label>
+                    <input type="password" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Confirm New Password</label>
+                    <input type="password" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-primary">Update Password</button>
+            </form>
+        </section>
+
+        <!-- Membership -->
+        <section class="settings-section" id="membership">
+            <h4>Membership</h4>
+            <p>You are currently on the <strong>Free Plan</strong>.</p>
+            <a href="membership.html" class="btn btn-primary">Upgrade Plan</a>
+        </section>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    // Smooth scroll for sidebar links
+    const links = document.querySelectorAll('.settings-sidebar a');
+    links.forEach(link => {
+        link.addEventListener('click', e => {
+            e.preventDefault();
+            links.forEach(l => l.classList.remove('active'));
+            link.classList.add('active');
+            document.querySelector(link.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
+        });
+    });
+
+    const avatarInput = document.getElementById('avatarInput');
+    const avatarPreview = document.getElementById('avatarPreview');
+
+    // Click on avatar opens file input
+    avatarPreview.addEventListener('click', () => {
+        avatarInput.click();
+    });
+
+    // Update preview when a file is selected
+    avatarInput.addEventListener('change', function() {
+        if (this.files && this.files[0]) {
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                avatarPreview.src = e.target.result;
+            }
+            reader.readAsDataURL(this.files[0]);
+        }
+    });
+</script>
 </body>
 </html>
