--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -41,7 +41,7 @@
     <div class="row mt-3">
         <!-- Main Feed -->
         <div class="col-lg-8">
-            <h2 class="mb-4">Bookmarks</h2>
+            <h2 class="mb-4">Notification</h2>
 
             <!-- Tab Content -->
             <div class="tab-content mt-3" id="notificationTabsContent">
