--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -22,6 +22,10 @@
         <form class="d-flex mx-3 flex-grow-1" role="search" onsubmit="return false;">
             <input class="form-control me-2" type="search" id="searchInput" placeholder="Search blogs, tags, or authors..." aria-label="Search">
             <button class="btn btn-outline-success" type="button" onclick="searchBlogs()">Search</button>
+
+            <div id="searchResults" class="list-group position-absolute w-100"
+                 style="top: 100%; z-index: 1050; display: none; max-height: 300px; overflow-y: auto;">
+            </div>
         </form>
 
         <nav class="nav-actions">
@@ -111,5 +115,6 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../js/dashboard.js"></script>
 </body>
 </html>
