--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -93,24 +93,34 @@
 
     <!-- Right Sidebar -->
     <aside class="rightbar">
-        <div class="card">
-            <h4>👥 People to Follow</h4>
-            <ul>
-                <li><a href="#">Emma Johnson</a></li>
-                <li><a href="#">Michael Brown</a></li>
-                <li><a href="#">Sophia Davis</a></li>
+        <!-- People to Follow -->
+        <div class="card p-3 mb-3 shadow-sm rounded">
+            <h4 class="mb-3">👥 People to Follow</h4>
+            <ul class="list-unstyled">
+                <li><a href="profile.html?id=1" class="follow-link">Emma Johnson</a></li>
+                <li><a href="profile.html?id=2" class="follow-link">Michael Brown</a></li>
+                <li><a href="profile.html?id=3" class="follow-link">Sophia Davis</a></li>
             </ul>
+            <a href="members.html" class="browse-link">Browse more →</a>
         </div>
-        <div class="card">
-            <h4>🔥 Trending Tags</h4>
-            <ul>
-                <li>#AI</li>
-                <li>#Travel</li>
-                <li>#WritingTips</li>
-                <li>#Productivity</li>
+
+        <!-- Trending Tags -->
+        <div class="card p-3 shadow-sm rounded">
+            <h4 class="mb-3">🔥 Trending Tags</h4>
+            <ul id="tagList" class="list-unstyled">
+                <li><a href="tag.html?name=AI" class="tag-link">#AI</a></li>
+                <li><a href="tag.html?name=Travel" class="tag-link">#Travel</a></li>
+                <li><a href="tag.html?name=WritingTips" class="tag-link">#WritingTips</a></li>
+                <li><a href="tag.html?name=Productivity" class="tag-link">#Productivity</a></li>
+                <li class="extra-tag d-none"><a href="tag.html?name=Design" class="tag-link">#Design</a></li>
+                <li class="extra-tag d-none"><a href="tag.html?name=Health" class="tag-link">#Health</a></li>
+                <li class="extra-tag d-none"><a href="tag.html?name=Startup" class="tag-link">#Startup</a></li>
+                <li class="extra-tag d-none"><a href="tag.html?name=Mindset" class="tag-link">#Mindset</a></li>
             </ul>
+            <a href="javascript:void(0)" class="browse-link" onclick="toggleTags()">Load more...</a>
         </div>
     </aside>
+
 </main>
 
 <!-- Bootstrap JS -->
