--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -3,8 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/stories.css" rel="stylesheet">
 </head>
 <body>
+<header>
+    <div class="container nav">
+        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
+            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
+        </a>
+
+        <!-- Navbar Actions -->
+        <nav class="nav-actions">
+            <a class="btn" href="dashboard.html">Explore</a>
+            <a class="btn" href="notification.html">Notifications</a>
+            <a class="btn " id="btn-write" href="blog-editor.html">Write</a>
+
+            <!-- User Profile Menu -->
+            <div class="dropdown profile-menu">
+                <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                    <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
+                    <li><a class="dropdown-item" href="stories.html">✍️ Stories</a></li>
+                    <li><a class="dropdown-item" href="membership.html">⭐ Become a Member</a></li>
+                    <li><a class="dropdown-item" href="settings.html">⚙️ Settings</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item text-danger" href="logout.html">🚪 Logout</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+
+<div class="container mt-3">
+    <div class="row mt-3">
+        <!-- Main Feed -->
+        <div class="col-lg-8">
+            <h2 class="mb-4">My Stories</h2>
+
+            <!-- Tab Content -->
+            <div class="tab-content mt-3" id="myStories">
+<!--load all published post here-->
+            </div>
+        </div>
+
+        <!-- Sidebar -->
+        <div class="col-lg-4">
+            <!-- Profile Card -->
+            <div class="card p-3 mb-3 text-center" id="edit-profile-card">
+                <img  class="profile-avatar mb-2" alt="Avatar">
+
+                <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
+                    <h4 class="profile-name m-0">Sasuniwijerathne</h4>
+                    <small class="text-muted">she/her</small>
+                </div>
+
+                <p>
+                    <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+                </p>
+
+                <p class="profile-bio">
+                    Just a 21+ girl navigating life with passion and purpose! ✨
+                </p>
+
+                <a href="../pages/profile-edit.html" class="btn btn-sm btn-outline-primary">
+                    Edit profile
+                </a>
+            </div>
+
+            <!-- Following List -->
+            <div class="card p-3 mb-3">
+                <h6 class="mb-3">Following</h6>
+                <ul class="list-unstyled following-list mb-0">
+                    <li class="d-flex align-items-center mb-2">
+                        <img  class="rounded-circle me-2" alt="">
+                        <span>test1</span>
+                    </li>
+                    <li class="d-flex align-items-center mb-2">
+                        <img  class="rounded-circle me-2" alt="">
+                        <span>test2</span>
+                    </li>
+                    <li class="d-flex align-items-center mb-2">
+                        <img  class="rounded-circle me-2" alt="">
+                        <span>test3</span>
+                    </li>
+                    <li>
+                        <a href="follow.html" class="text-decoration-none">See all (12)</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="../js/stories.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
