--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -45,9 +45,13 @@
 
             <!-- Tab Content -->
             <div class="tab-content mt-3" id="myStories">
-<!--load all published post here-->
+                <div class="tab-pane fade show active" id="draft" role="tabpanel"></div>
+                <div class="tab-pane fade" id="published" role="tabpanel"></div>
+                <div class="tab-pane fade" id="archived" role="tabpanel"></div>
+                <div class="tab-pane fade" id="scheduled" role="tabpanel"></div>
             </div>
         </div>
+
 
         <!-- Sidebar -->
         <div class="col-lg-4">
