--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -47,6 +47,8 @@
             <p class="text-muted">By <strong>Author Name</strong> · Aug 24, 2025</p>
             <img alt="Story Cover" class="img-fluid rounded mb-3">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. This is where your story content will go...</p>
+
+            <div id="story-actions" class="mt-3"></div>
         </div>
     </div>
 </main>
