--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -41,17 +41,50 @@
 
 <main class="container mt-4">
     <div class="row">
-        <!-- Story Detail Content Goes Here -->
-        <div class="col-lg-8 mx-auto">
+        <!-- Left Column: Story Content -->
+        <div class="col-lg-8">
             <h1 class="mb-3">Story Title</h1>
             <p class="text-muted">By <strong>Author Name</strong> · Aug 24, 2025</p>
             <img alt="Story Cover" class="img-fluid rounded mb-3">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. This is where your story content will go...</p>
+        </div>
 
-            <div id="story-actions" class="mt-3"></div>
+        <!-- Right Column: Edit/Delete Actions -->
+        <div class="col-lg-4 d-flex flex-column align-items-start mt-3 mt-lg-0">
+            <div id="story-actions" class="d-grid gap-2 w-100">
+                <!-- Edit & Delete buttons injected by JS -->
+            </div>
         </div>
     </div>
 </main>
+
+
+<!-- ✅ Edit Modal -->
+<div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">✏️ Edit Story</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form id="editForm">
+                    <div class="mb-3">
+                        <label class="form-label">Title</label>
+                        <input type="text" id="editTitle" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Content</label>
+                        <textarea id="editContent" class="form-control" rows="8" required></textarea>
+                    </div>
+                    <div class="text-end">
+                        <button type="submit" class="btn btn-success">💾 Save Changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/story-details.js"></script>
